# PxdmfSuite

./: LICENSE
ParaviewPXDMFReader/: CMakeLists.txt  CMakeMacros.txt  README  ReaderSync.py  module.cmake  plugin.cmake  pqPXDMFReader.qrc
ParaviewPXDMFReader/About/: AboutPXDMF.ui  CMakeLists.txt  PXDMFAboutHelpMenuActions.cxx  PXDMFAboutHelpMenuActions.h  pqAboutGEM.cxx  pqAboutGEM.h  pqAboutGEMStarter.cxx.in  pqAboutGEMStarter.h
ParaviewPXDMFReader/AddZeros/: CMakeLists.txt  vtkAddZeros.cxx  vtkAddZeros.h  vtkAddZeros.xml
ParaviewPXDMFReader/AnnotateFieldData/: AnnotateFieldData.xml  CMakeLists.txt  vtkFieldDataToTextConvertor.cxx  vtkFieldDataToTextConvertor.h
ParaviewPXDMFReader/ApplyOnBlocks/: ApplyOnBlocks.xml  CMakeLists.txt  vtkApplyOnBlocksFilter.cxx  vtkApplyOnBlocksFilter.h  vtkSIMetaFilterProxy.cpp  vtkSIMetaFilterProxy.h
ParaviewPXDMFReader/ArcLength/: ArcLegth.xml  CMakeLists.txt
ParaviewPXDMFReader/ArrayCalculatorGlobal/: ArrayCalculatorGlobal.xml  CMakeLists.txt  vtkArrayCalculatorGlobal.cxx  vtkArrayCalculatorGlobal.h  vtkPVArrayCalculatorGlobal.cxx  vtkPVArrayCalculatorGlobal.h
ParaviewPXDMFReader/Behaviors/: AxesLabels.cxx  AxesLabels.h  CMakeLists.txt  PostFilters.cxx  PostFilters.h
ParaviewPXDMFReader/BuildFiles/: install_pxdmfreader.cmake  pxdmfreader.cmake
ParaviewPXDMFReader/DICOMReader/: CMakeLists.txt  DICOMReader.xml
ParaviewPXDMFReader/Data/: 1D1D.pxdmf  1DStructurePointAndCellData.xdmf  array1d_sample.xmf  datagenerator.m
ParaviewPXDMFReader/Documentation/: CMakeLists.txt  PXDMFReader.tex.in  about.html.in  index.html.in
ParaviewPXDMFReader/Extras/: CMakeLists.txt  blashelper.h  stringhelper.cxx  stringhelper.h
ParaviewPXDMFReader/GlobalToPoint/: CMakeLists.txt  GlobalToPoint.xml  vtkFieldDataToPoint.cxx  vtkFieldDataToPoint.h
ParaviewPXDMFReader/GmshInterface/: CMakeLists.txt  gmshInterface.xml  vtkgmshInterface.cxx  vtkgmshInterface.h
ParaviewPXDMFReader/GmshReader/: CMakeLists.txt  gmshReader.xml  vtkgmshReader.cxx  vtkgmshReader.h
ParaviewPXDMFReader/GmshWriter/: CMakeLists.txt  gmshWriter.xml  gmshWriterGUI.xml  vtkgmshWriter.cxx  vtkgmshWriter.h
ParaviewPXDMFReader/MeshReader/: CMakeLists.txt  meshReader.xml  vtkmeshReader.cxx  vtkmeshReader.h
ParaviewPXDMFReader/MostUsedActions/: CMakeLists.txt  MostUsedActions.cxx  MostUsedActions.h
ParaviewPXDMFReader/OldStaff/: AnnotateFieldDataGUI.xml  ApplyOnBlocks.xml  ApplyOnBlocksGUI.xml  ArrayCalculatorGlobalGUI.xml  GlobalToPointGUI.xml  Notes  OptimiGUI.xml  PXDMFReaderGUI.xml  ReconstructionGUI.xml  TransformFilterWithAxisGUI.xml  gmshReaderGUI.xml  pqCalculatorGlobalPanel.cxx  pqCalculatorGlobalPanel.h  pqCalculatorGlobalPanel.ui  pqFixDimCreatorDialog.ui  pqPXDMFReaderPanel.cxx  pqPXDMFReaderPanel.h  pqPXDMFReaderPanel.ui  pqPXDMFReaderPanelNew.ui  pqPXDMFSettings.cxx  pqPXDMFSettings.h  pqPXDMFSettings.ui  vtkAddZerosGUI.xml  vtkApplyOnBlocks.cxx  vtkApplyOnBlocks.h
ParaviewPXDMFReader/Optimi/: CMakeLists.txt  Optimi.xml  vtkOptimi.cxx  vtkOptimi.h
ParaviewPXDMFReader/PGDTools/: ParavieAnim.py  ReaderSync.py  anim.py
ParaviewPXDMFReader/PXDMFReader/: CMakeLists.txt  FileDataAbstract.cxx  FileDataAbstract.h  PXDMFDocumentBaseStructure.xml  PXDMFReader.xml  XDMF2Data.cxx  XDMF2Data.h  XDMF3Data.cxx  XDMF3Data.h  vtkPXDMFDocument.cxx  vtkPXDMFDocument.h  vtkPXDMFDocumentBaseStructure.cxx  vtkPXDMFDocumentBaseStructure.h  vtkPXDMFReader.cxx  vtkPXDMFReader.h
ParaviewPXDMFReader/PXDMFSync/: CMakeLists.txt  pqPXDMFSync.cpp  pqPXDMFSync.h  pqPXDMFSync.ui
ParaviewPXDMFReader/PXDMFWriter/: CMakeLists.txt  PXDMFWriter.xml  vtkPXDMFWriter.cxx  vtkPXDMFWriter.h  vtkPXDMFWriter3.cxx  vtkPXDMFWriter3.h
ParaviewPXDMFReader/Qtsources/: CMakeLists.txt  QAllTreeWidget.cxx  QAllTreeWidget.h  QWidgetDetach.h  pqCalculatorGlobalWidget.cxx  pqCalculatorGlobalWidget.h  pqComputeDerivativesWidgetDecorator.cxx  pqComputeDerivativesWidgetDecorator.h  pqFixedDimensionControl.cxx  pqFixedDimensionControl.h  pqPointCellDataSelector.cxx  pqPointCellDataSelector.h  pqPointCellDataSelector.ui  pqRefreshButton.cxx  pqRefreshButton.h  pqSpaceTimeSelector.cxx  pqSpaceTimeSelector.h  pqSpaceTimeSelector.ui
ParaviewPXDMFReader/RawWriter/: CMakeLists.txt  rawWriter.xml  rawWriterGUI.xml  vtkrawWriter.cxx  vtkrawWriter.h
ParaviewPXDMFReader/Reconstruction/: CMakeLists.txt  Reconstruction.xml  vtkReconstruction.cxx  vtkReconstruction.h
ParaviewPXDMFReader/SVTKReader/: CMakeLists.txt  SVTKReader.xml  SVTKReaderGUI.xml  vtkSVTKReader.cxx  vtkSVTKReader.h
ParaviewPXDMFReader/Settings/: CMakeLists.txt  settings.xml  vtkPXDMFGeneralSettings.cpp  vtkPXDMFGeneralSettings.h
ParaviewPXDMFReader/Tests/: CMakeLists.txt
ParaviewPXDMFReader/Tests/PythonTests/: CMakeLists.txt  TestPxdmfWriter.py
ParaviewPXDMFReader/Tests/TestMemLeak/: CMakeLists.txt  TestMemLeak.cpp
ParaviewPXDMFReader/Tests/TestRealTime/: CMakeLists.txt  TestRealTime.cpp
ParaviewPXDMFReader/Tests/TestReconstruction/: CMakeLists.txt  TestReconstruction.cxx
ParaviewPXDMFReader/Tests/TestRefresh/: data1fieldsfewModes.pxdmf  data2fieldsManyModes.pxdmf  permute.sh  testdata.pxdmf
ParaviewPXDMFReader/Tests/TestvtkPXDMFDocument/: CMakeLists.txt  TestvtkPXDMFDocument.cpp
ParaviewPXDMFReader/Tests/test_data/: Ascii.pxdmf  Ascii_single.pxdmf  Ascii_struct.pxdmf  Data.pxdmf  FeedBack.pxdmf  Structured_Ascii.h5  Structured_Ascii.pxdmf  Structured_Ascii_1D.xdmf  Structured_Ascii_2D.xdmf  Structured_Ascii_only_nodesfield.pxdmf  Structured_Ascii_only_nodesfield.xdmf  Structured_Ascii_single.pxdmf  TestParametricMaterial.xml  binary.h5  binary.pxdmf  binary_comp.h5  binary_comp.pxdmf  binary_comp_single.h5  binary_comp_single.pxdmf  binary_single.h5  (+5 more)
ParaviewPXDMFReader/TransformWithAxis/: CMakeLists.txt  TransformFilterWithAxis.xml  vtkTransformFilterWithAxis.cxx  vtkTransformFilterWithAxis.h
ParaviewPXDMFReader/filterstest/: CMakeLists.txt  filtertest.xml  filtertestGUI.xml  vtkfiltertest.cxx  vtkfiltertest.h
ParaviewPXDMFReader/filterstestbase/: filtertest.xml  filtertestGUI.xml  vtkfiltertest.cxx  vtkfiltertest.h
(+2 files in other folders)
